--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,60 @@
-== README
+# RubygarageAmazon.
+Business logic structure:
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+### Book
+* Should contain title, descirption, price and how many books in stock
+* Title, price, books in stock fields should be required
+* Should belong to author and category
+* Should have many ratings from costomers
 
-Things you may want to cover:
+### Category
+* Has a title
+* Title should be required and unique
+* Should have many books
 
-* Ruby version
+### Author
+* Should contain firstname, lastname, biography
+* Firstname, lastname fields should be required
+* Should have many books
 
-* System dependencies
+### Rating
+* Should contain text review and rating number from one to ten
+* Should belong to customer and book
 
-* Configuration
+### Customer
+* Should contain email, password, firstname, lastname
+* Email, password, firstname, lastname fields should be required
+* Email should be unique
+* Should have many orders, ratings
+* A customer should be able to create a new order
+* A customer should be able to return a current order in progress
 
-* Database creation
+### Order
+* Should contain total price, completed date and state (in progress/complited/shipped)
+* Total price, completed date and state fields should be required
+* By default an order should have 'in progress' state
+* Should belong to customer and credit card
+* Should have many order items
+* Should have one billing address and one shipping address
+* An order should be able to add a book to the order
+* An order should be able to return a total price of the order
 
-* Database initialization
+### OrderItem
+* Should contain price and quantity
+* Price and quantity fields should be required
+* Should belong to book and order
 
-* How to run the test suite
+### Address
+* Should contain address, zipcode, city, phone, country
+* All fields should be required
 
-* Services (job queues, cache servers, search engines, etc.)
+### Country
+* Should contain a name
+* Name should be required and unique
 
-* Deployment instructions
+### CreditCard
+* Should contain number, CVV, expiration month, expiration year, firstname, lastname
+* All fields should be required
+* Should belong to customer and have many orders
 
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+###### Necessary to create a DB structure, models, associations and validations to models, autotests and factories for autotests.
